fix albums on mobile

--- a/app/styles/album.less
+++ b/app/styles/album.less
@@ -40,8 +40,8 @@
   }
   @media all and (max-width:800px){
     .tracklist {
-      float:left;
-      padding-right:2em;
+      float:right;
+      //padding-right:2em;
     }
     .title {
       font-size:1.7em;
@@ -55,7 +55,7 @@
     padding-right:2em;
   }
   .product-links {
-    clear:left;
+    clear:none;
   }
 }
 
